# sql_data_analyst

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  __init__.py  baseline.py  check_hf.py  client.py  enterprise-analyst-backend-x86_64-pc-windows-msvc.spec  generate_sample_data.py  inference.py  models.py  openenv.yaml  pyproject.toml  pyrightconfig.json  run_backend.py  run_tests.py  summary.txt  test_db.py  test_local.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  secret-scan.yml
backend/: __init__.py  app.py  package_app.py  utils.py
backend/adapters/: __init__.py  base.py  firebase.py  flatfile.py  mongo.py  postgres.py
backend/agents/: __init__.py  llm_client.py  nim_client.py  swarm.py
backend/uploads/: sample_sales_a269.csv
frontend/: .env.production  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  config.ts  index.css  types.ts  utils.ts
frontend/src/components/: DatabaseSetup.tsx  Settings.tsx  Sidebar.tsx  Workspace.tsx
frontend/src/data/: sampleSales.ts
landing_page/: .firebaserc  README.md  firebase.json  index.html  metadata.json  package-lock.json  package.json  server.ts
landing_page/.firebase/: hosting.ZGlzdA.cache
landing_page/src/: App.tsx  config.ts  firebaseClient.ts  index.css  types.ts
landing_page/src/components/: AuthModal.tsx  Dashboard.tsx  DatabaseSetup.tsx  Documentation.tsx  InteractiveDashboard.tsx  LandingPage.tsx  Sidebar.tsx  SwarmCanvas.tsx  Workspace.tsx
scratch/: dummy_firebase_sa.json  seed_databases.py  test_firestore_conn.py  test_preview.py
server/: Dockerfile  __init__.py  app.py  database.py  environment.py  grader.py  requirements.txt  tasks.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
