[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-sql_data_analyst"
version = "0.1.0"
description = "Multi-step SQL Data Investigation Environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    "openenv-core[core]>=0.2.1",
    # SQLite is built into Python stdlib — no extra DB deps needed
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "sql_data_analyst.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["sql_data_analyst", "sql_data_analyst.server"]
package-dir = { "sql_data_analyst" = ".", "sql_data_analyst.server" = "server" }
